[tool.poetry]
name = "pixivpy3"
version = "3.12.3"
description = "Pixiv API for Python (with 6.x AppAPI supported)"
authors = ["upbit <rmusique@gmail.com>"]
license = "Unlicense"
readme = "README.md"
keywords = ["pixiv", "api", "pixivapi"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/upbit/pixivpy"

[tool.poetry.dependencies]
python = "^3.8.1"
cloudscraper = "^1.2.58"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
urllib3 = "^2.0.7"
typing-extensions = "^4.1.1"
pydantic = "^1.9.0"

[tool.poetry.group.dev.dependencies]
black = [
  { version = ">=23.1.0", extras = ["jupyter"], markers = "python_version < '3.12'" },
  { version = ">=23.12.0", extras = ["jupyter"], markers = "python_version >= '3.12'" }
]
pytest = ">=7.3"
pre-commit = ">=2.18.1"
mypy = ">=0.931"
types-requests = ">=2.27.10"
flake8 = "^7.1.1"

[tool.poetry.group.test.dependencies]
pytest = ">=7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = 7.3
log_cli = true
log_cli_level = 20
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
exclude = ['tests', 'demo.py']
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
select = [
  "F", # pyflakes
  "E", # pycodestyle
  "W", # pycodestyle warnings
  "I", # isort
  "D", # pydocstyle

]
ignore = []
extend-ignore = [
  "D105", # undocumented-magic-method
  "D107", # undocumented-public-init
  "D205", # blank-line-after-summary
  "D415"
  # ends-in-punctuation
]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
