[metadata]
name = PixivPy
version = attr: pixivpy3.__version__
description = Pixiv API for Python (with 6.x AppAPI supported)
long_description = file: README.md
long_description_content_type = text/markdown
license = The Unlicense
author = upbit
author_email = rmusique@gmail.com
url = https://github.com/upbit/pixivpy
download_url = https://github.com/upbit/pixivpy/releases
keywords =
    pixiv
    api
    pixivapi
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    requests>=2.0
    requests_toolbelt>=0.9.1
    cloudscraper>=1.0,<1.2.50

[options.extras_require]
dev =
    setuptools
    mypy
    flake8

[mypy]
show_error_codes = True
pretty = True
strict = True
files = pixivpy3

