[metadata]
name = PixivPy3
version = file: pixivpy3/VERSION
description = Pixiv API for Python (with 6.x AppAPI supported)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/upbit/pixivpy
author = upbit
author_email = rmusique@gmail.com
license = Unlicense
license_file = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
download_url = https://github.com/upbit/pixivpy/releases
keywords =
    pixiv
    api
    pixivapi

[options]
packages = find:
install_requires =
    cloudscraper>=1.2.58
    requests>=2.27.1
    requests-toolbelt>=0.9.1
    typing-extensions>=4.1.1
python_requires = >=3.7
include_package_data = True

[options.extras_require]
dev =
    black[jupyter]>=22.1.0
    flake8>=4.0.1
    flake8-black>=0.3.0
    isort>=5.10.1
    mypy>=0.931
    pre-commit>=2.18.1
    setuptools>=60.9.3
    types-requests>=2.27.10
    pytest>=7.3

tests =
    pytest>=7.3

[options.package_data]
pixivpy3 = py.typed

[mypy]
python_version = 3.7
show_error_codes = True
pretty = True
strict = True
files = pixivpy3

[flake8]
max-complexity = 10
max-line-length = 127

[black]
max-line-length = 127
